2005-08-07
	* Fix bug 1253692.  Fixed price auction error now handled gracefully.

2005-07-04
	* 2.11.0 released
	* Fixed proxy handling.  Removed lookup of http_proxy environment
	  variable, since libcurl does it.
	* Fixed myItems item number parsing, including for auctions with
	  no image.  Also added support for user notes.
	* Enhanced bug reporting.

2005-06-27
	* Fix bug 1228701.  Time left heading has a table cell between it and
	  the cell containing the actual time left.

2005-04-19
	* handle bid history for purchases (i.e. store items and buy-it-now
	  with no bidding)

2005-04-16
	* added -i option: print information on given auctions and exit

2005-03-09
	* rewrote error handling in prebid and bid history

2005-02-05
	* moved getopt into util.c to make compiling on windows easier
	* fixed handling of prebid result when auction has ended

2005-01-31
	* 2.10.0 released

2005-01-26
	* Fix bidding problem that sends esniper to PageReviewBid

2005-01-21
	* handle blank time left field in bid history.  This happens in
	  the last second of an auction

2005-01-19
	* code cleanup thanks to lint and valgrind
	* rewrote bid history parsing to use table parsing code.  This should
	  resolve many little problems with bid history parsing, especially
	  with dutch auctions

2004-12-29
	* recognize AcceptBid_HighBidder_rebid
	* added table parsing
	* added -m option, reads myebay watch list
	* removed us-ascii kludge that knocked off high bit on text

2004-12-19
	* show user's max bid

2004-12-16
	* fixed segfault in http.c
	* don't expose password in log files
	* Use bid password (returned in preBid) instead of user password
	  for bidding.
	* integrated configure patch

2004-12-15
	* 2.9.0Beta released
	* allow use of older versions of libcurl
	* login rewrite
	* bug report generator
	* sort auctions by current status (winning bid already placed goes first)

2004-12-06
	* autotools patch (from hoetzel)

2004-11-25
	* Released 2.9.0Alpha